2008-05-01  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: gnome-nettool branched for
	GNOME 2.22.

2008-05-01  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	* modulesets/gnome-external-deps-2.24.modules:
	Raise dependency of libxklavier to 3.6 as needed
	by gnome-control-center.

2008-05-01  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/arch.py, jhbuild/versioncontrol/bzr.py,
	jhbuild/versioncontrol/darcs.py, jhbuild/versioncontrol/git.py,
	jhbuild/versioncontrol/hg.py, jhbuild/versioncontrol/mtn.py,
	jhbuild/versioncontrol/tarball.py: aborts with an useful message when a
	branch is incorrectly overrided in .jhbuildrc.

2008-05-01  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py: use JHBuild executed Python to get version number
	and set PYTHONPATH appropriately.  (closes: #136983)

2008-05-01  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-suites-2.22.modules: put back gnome-2-20 branch for
	GDM. (was probably committed by accident)

2008-04-30  Jaap A. Haitsma  <jaap@haitsma.org>

	* modulesets/freedesktop-2.24.modules:
	Add telepathy-stream-engine, libfarsight and gst-plugins-farsight

2008-04-29  William Jon McCann  <jmccann@redhat.com>

	* modulesets/gnome-suites-2.22.modules:
	gnome-screensaver branched.

2008-04-29  Jaap A. Haitsma  <jaap@haitsma.org>

	* modulesets/gnome-2.24.modules: Update dependencies of empathy

2008-04-25  Richard Hult  <richard@imendio.com>

	* jhbuild/config.py: Only catch Exception when reading the config
	file, not all (most notably not BaseException) exceptions. This
	makes it possible to exit nicely from the config file for example,
	which is useful in more advanced jhbuildrc setups like the one for
	building GTK+ OS X. Fixes bug #529942. Thanks Johan!

2008-04-25  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.24.modules: gnome-lirc-properties is now in GNOME 
	svn.

2008-04-24  Frederic Peters  <fpeters@0d.be>
