@@ -1,3 +1,13 @@
+2008-05-02  Frederic Peters  <fpeters@0d.be>
+
+	* doc/C/jhbuild.xml, jhbuild/commands/base.py, jhbuild/moduleset.py:
+	add --build-optional-modules and --list-optional-modules (respectively
+	for the build and list commands) to include modules that would
+	otherwise not be built/listed in the dependency graph.
+
+	* doc/C/jhbuild.xml: add documentation for the --force option (for
+	build and buildone commands).
+
 2008-05-01  Frederic Peters  <fpeters@0d.be>
 
 	* modulesets/gnome-suites-2.22.modules: gnome-nettool branched for
